# calculator

./: .gitignore  AGENTS.md  README.md  build.bat  license_manager.py  pyproject.toml  test_license_activation.py
docs/: architecture.md
glycoenum/: __init__.py  __main__.py  cli.py  formula.py  gui.py  mass.py  permute.py
glycoenum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
